--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: uBuild Design Blocks
 author: Forestry.io
 email: support@forestry.io
 description: >-
-  ubuild-jekyll is a Jekyll theme desgined to work with Forestry's Blocks feature. 
-  This theme provides a set of page-level components and a pre-configured Forestry Blocks UI 
+  ubuild-jekyll is a Jekyll theme desgined to work with Forestry's Blocks feature.
+  This theme provides a set of page-level components and a pre-configured Forestry Blocks UI
   that will empower content editors to construct their own webpages.
 baseurl: "/ubuild-jekyll" # the subpath of your site, e.g. /blog
 url: "" # your site's origin, e.g. https://forestry.io
@@ -14,6 +14,11 @@ defaults:
       path: "" # an empty string here means all files in the project
     values:
       layout: "default" # this ensures all content renders with layouts/default.html
+collections:
+  beers:
+    output: true
+    permalink: "/beers/:path/"
+
 markdown: kramdown
 gems:
   - jekyll-feed
